=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.96

   * additional support for weird concatenated PDB files such as those
     output by MOE

   * fixed problem with rendering of discontinuous surfaces

   -- beta13
   
   * get_angle, get_distance commands
 
   * fixed pasting to OpenGL window under X11

   * fixed "Get View" button in MacPyMOL, now also copying
     matrix direct to the clipboard in all versions.  

   * API load actions now run quietly by default, like other functions.

   * pdb_reformat_names_mode = 3 gives IUPAC internally with PDB I/O
     pdb_reformat_names_mode = 1 (PDB) & 2 (Amber/IUPAC), now
     correctly handle 3-letter names correctly for various hydrogens

   * fixed occasional "snail track" bug with surfaces

   * seq_view_label_mode setting

   * wizard prompt now avoids overlap with sequence browser

   * double-click-to-center now uses current state coordinates only

   * tentative PQR file reading support

   * fixed major bug in map ranging code

   -- beta 11

   * updated color handling for sequence viewer

   * new settings: auto_classify_atoms, selection operators:
     polymer, solvent, organic, inorganic

   * transparency_mode now subordinates backface_cull and 
     two_sided_lighting in OpenGL and the ray tracer

   * seq_view settings

   * sequence viewer is now "in"

   * mouse_selection_mode setting

   * got real busy on the sequence viewer

   * created plugin menu

   * further menu consolidation to make room for plugin menus

   * fixed "use display lists" menu option

   * fixed "stereo swap" and Display->Stereo->Swap Sides menu item.

   * ray_transparency contrast back to default of 1.0 default (WYSIWYG).

   * fixed a few minor bugs with picked atom selection indices

   * menus now stay without mouse being held down (what an improvement!)
